--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=user-service-api
+server.port=8082
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service_api_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=1234
