--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ keycloak.config.name=thaminduweeravardana@gmail.com
 keycloak.config.secret=NFYpGKTVda54Czv8SJrY38z9MINQlmLF
 keycloak.config.password=1234
 
-emailkey=hdfyebsidoffdueiwx,feueeshdvewewohddfdvbxtswoismmkhgd
+emailKey=
 fromEmail=thaminduweeravardana@gmail.com
 
 accessKey=accessKey
